Java Upgrade tech debt related work: code cleanup, upgrading dependencies, replacing custom healthcheck with actuator